--- a/public/stylesheets/homepage.css
+++ b/public/stylesheets/homepage.css
@@ -1,3 +1,30 @@
+/* first page */
+.closeimage{
+	width: 100%;
+	height: 100vh;
+	position: absolute;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	background: rgba(36, 34, 34, 0.6);
+	z-index:10 ;
+	backdrop-filter: blur(5px);
+	
+}
+.closeimage img{
+	
+    width: 75vh;
+	height: 55vh;
+}
+.exit1 {
+	position: absolute;
+	right: 28%;
+	top: 15%;
+}
+.exit1 img{
+	width: 4vw;
+	height: 8vh;
+}
 /* DARK MODE */
 
 .backgroundMain.dark {
