--- a/views/home.ejs
+++ b/views/home.ejs
@@ -27,10 +27,13 @@
 </head>
 
 <body class="body">
-	<div class="closeimage">
-		<span class="exit1"><img src="https://img.icons8.com/ios-glyphs/40/000000/macos-close.png" /></span>
-		<img src="images/aboutus/Gallery1.jpg" alt="">
-	</div>
+	<% console.log(state); %> 
+	<% if (state === "active") { %>
+		<div class="closeimage">
+			<span class="exit1"><img src="https://img.icons8.com/ios-glyphs/40/000000/macos-close.png" /></span>
+			<img src="images/aboutus/Gallery1.jpg" alt="">
+		</div>
+	<% } %>
 	<div class="backgroundMain">
 		<%- include('./layout/header') %>
 			<%- include('./chatbot') %>
