--- a/views/namakkal.ejs
+++ b/views/namakkal.ejs
@@ -23,16 +23,16 @@
 				<div class="swiper-wrapper">
 					<!-- Slides -->
 					<div class="swiper-slide">
-						<img src="images/home/carousel/1.jpg" alt="" />
-					</div>
-					<div class="swiper-slide">
-						<img src="images/home/carousel/2.jpg" alt="" />
-					</div>
-					<div class="swiper-slide">
-						<img src="images/home/carousel/3.jpg" alt="" />
-					</div>
-					<div class="swiper-slide">
 						<img src="images/home/carousel/4.jpg" alt="" />
+					</div>
+					<div class="swiper-slide">
+						<img src="images/home/carousel/5.jpg" alt="" />
+					</div>
+					<div class="swiper-slide">
+						<img src="images/home/carousel/6.jpg" alt="" />
+					</div>
+					<div class="swiper-slide">
+						<img src="images/home/carousel/7.jpg" alt="" />
 					</div>
 				</div>
 				<!-- If we need pagination -->
@@ -46,7 +46,7 @@
 				<div class="swiper-scrollbar"></div>
 			</section>
 			<section class="about">
-				<h1 class="head">ABOUT SALEM BRANCH</h1>
+				<h1 class="head">ABOUT NAMAKKAL BRANCH</h1>
 				<span class="para"><p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Harum iure, distinctio eius quibusdam velit
 					fuga debitis maiores quo! Nisi iure, adipisci exercitationem dolores libero unde. Nulla architecto
 					provident vitae dicta. Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur eum,
