--- a/views/layout/adminSideBar.ejs
+++ b/views/layout/adminSideBar.ejs
@@ -299,6 +299,55 @@
 				</ul>
 			</div>
 		</li>
+		<li class="mb-4">
+			<button
+				class="btn btn-toggle align-items-center rounded collapsed fs-5"
+				data-bs-toggle="collapse"
+				data-bs-target="#branches-collapse"
+				aria-expanded="false"
+			>
+				<b>Branches</b>
+			</button>
+			<div class="collapse" id="branches-collapse">
+				<ul
+					class="
+						btn-toggle-nav
+						list-unstyled
+						fw-normal
+						pb-1
+						ms-4
+						d-flex
+						flex-column
+						justify-content-center
+						fs-6
+						mt-2
+						ms-4
+						small
+					"
+				>
+					<li>
+						<a href="/admin/branch/salem" class="link-dark rounded ahover"
+							>Salem</a
+						>
+					</li>
+					<li>
+						<a href="/admin/branch/namakkal" class="link-dark rounded ahover"
+							>Namakkal</a
+						>
+					</li>
+					<li>
+						<a href="/admin/branch/dharmapuri" class="link-dark rounded ahover"
+							>Dharmapuri</a
+						>
+					</li>
+					<li>
+						<a href="/admin/branch/vellore" class="link-dark rounded ahover"
+							>Vellore</a
+						>
+					</li>
+				</ul>
+			</div>
+		</li>
 	</ul>
 </div>
 
