--- a/views/salem.ejs
+++ b/views/salem.ejs
@@ -22,18 +22,11 @@
 				<!-- Additional required wrapper -->
 				<div class="swiper-wrapper">
 					<!-- Slides -->
-					<div class="swiper-slide">
-						<img src="images/home/carousel/1.jpg" alt="" />
-					</div>
-					<div class="swiper-slide">
-						<img src="images/home/carousel/2.jpg" alt="" />
-					</div>
-					<div class="swiper-slide">
-						<img src="images/home/carousel/3.jpg" alt="" />
-					</div>
-					<div class="swiper-slide">
-						<img src="images/home/carousel/4.jpg" alt="" />
-					</div>
+					<% img.forEach(i => { %>
+						<div class="swiper-slide">
+							<img src="<%= i.sliderimg %> " alt="" />
+						</div>
+					<% }) %>
 				</div>
 				<!-- If we need pagination -->
 				<div class="swiper-pagination"></div>
