--- a/views/layout/header.ejs
+++ b/views/layout/header.ejs
@@ -36,8 +36,19 @@
 						<li>
 							<a class="odd resultsnav" href="/results"><b>Results</b></a>
 						</li>
+						<li class="menu">
+							<a class="even ourbranchesnav"><b>Our Branches</b></a>
+							
+								<ul class="submenu none">
+									<li><a href="/salem" class="dropdown">Salem</a></li>
+									<li><a href="/namakkal" class="dropdown">Namakkal</a></li>
+									<li><a href="/dharmapuri" class="dropdown">Dharmapuri</a></li>
+									<li><a href="/vellore" class="dropdown">Vellore</a></li>
+								</ul>
+							
+						</li>
 						<li>
-							<a class="even contactusnav" href="/contactus"
+							<a class="odd contactusnav" href="/contactus"
 								><b>Contact Us</b></a
 							>
 						</li>
