--- a/public/stylesheets/nav.css
+++ b/public/stylesheets/nav.css
@@ -1,5 +1,3 @@
-/* NAVBAR */
-
 body.dark .nav-toggler span,
 body.dark .nav-toggler span::before,
 body.dark .nav-toggler span::after {
@@ -139,6 +137,27 @@ a.site-logo {
 .intro-area p {
 	font-size: 18px;
 }
+/* dropdown */
+.menu{
+	position: relative;
+	display: inline-block;
+}
+.submenu{
+	height:fit-content;
+	width: 500px;
+	
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	position: absolute;
+	z-index: 10;
+	background: #fff;
+	color: #000;
+}
+.none{
+	display: none !important;
+}
+
 @media (max-width: 1275px) {
 	.nav2 {
 		width: 80%;
