--- a/views/layout/header.ejs
+++ b/views/layout/header.ejs
@@ -16,42 +16,51 @@
 				<!-- site menu/nav -->
 				<div class="nav2">
 					<ul>
-						<li><a class="even homenav" href="/">Home</a></li>
-						<li>
-							<a class="odd coursesnav" href="/#courses"><b>Courses</b></a>
-						</li>
-						<li>
-							<a class="even aboutusnav" href="/Aboutus"><b>About Us</b></a>
-						</li>
-						<li>
-							<a class="odd Demovideosnav" href="/Demovideos"
-								><b>Demo Videos</b></a
-							>
-						</li>
-						<li>
-							<a class="even successstoriesnav" href="/successstories"
-								><b>Success Stories</b></a
-							>
-						</li>
-						<li>
-							<a class="odd resultsnav" href="/results"><b>Results</b></a>
-						</li>
-						<li class="menu">
-							<a class="even ourbranchesnav"><b>Our Branches</b></a>
-							
-								<ul class="submenu none">
-									<li><a href="/salem" class="dropdown">Salem</a></li>
-									<li><a href="/namakkal" class="dropdown">Namakkal</a></li>
-									<li><a href="/dharmapuri" class="dropdown">Dharmapuri</a></li>
-									<li><a href="/vellore" class="dropdown">Vellore</a></li>
-								</ul>
-							
-						</li>
-						<li>
-							<a class="odd contactusnav" href="/contactus"
-								><b>Contact Us</b></a
-							>
-						</li>
+						
+							<li class="mobilebefore"><a class="even homenav" href="/">Home</a></li>
+							<li class="mobilebefore">
+								<a class="odd coursesnav" href="/#courses"><b>Courses</b></a>
+							</li>
+							<li class="mobilebefore">
+								<a class="even aboutusnav" href="/Aboutus"><b>About Us</b></a>
+							</li>
+							<li class="mobilebefore">
+								<a class="odd Demovideosnav" href="/Demovideos"
+									><b>Demo Videos</b></a
+								>
+							</li>
+							<li class="mobilebefore">
+								<a class="even successstoriesnav" href="/successstories"
+									><b>Success Stories</b></a
+								>
+							</li>
+							<li class="mobilebefore">
+								<a class="odd resultsnav" href="/results"><b>Results</b></a>
+							</li>
+							<li class="menu mobilebefore">
+								<a class="even ourbranchesnav"><b>Our Branches</b></a>
+								
+									<ul class="submenu none">
+										<li><a href="/salem" class="dropdown">Salem</a></li>
+										<li><a href="/namakkal" class="dropdown">Namakkal</a></li>
+										<li><a href="/dharmapuri" class="dropdown">Dharmapuri</a></li>
+										<li><a href="/vellore" class="dropdown">Vellore</a></li>
+									</ul>
+							</li>
+							<li class="mobilebefore">
+								<a class="odd contactusnav" href="/contactus"
+									><b>Contact Us</b></a
+								>
+							</li>		
+						<span class="mobile none">
+							<li><a href="/namakkal" class="dropdown">Namakkal</a></li>
+							<li><a href="/salem" class="dropdown">Salem</a></li>
+							<li><a href="/dharmapuri" class="dropdown">Dharmapuri</a></li>
+							<li><a href="/vellore" class="dropdown">Vellore</a></li>
+						</span>
+					</ul>
+					<ul class="show none">
+						
 					</ul>
 					<span class="dark-mode-toggle"></span>
 					<button class="nav-toggler">
