--- a/views/admin/home/loadingimg.ejs
+++ b/views/admin/home/loadingimg.ejs
@@ -1,58 +1,236 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Admin panel</title>
-    <link rel="shortcut icon" href="../../images/home/classic-nee-tacademy-logo.png" type="image/x-icon" />
+	<head>
+		<meta charset="UTF-8" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>Admin panel</title>
+		<link rel="shortcut icon" href="../../images/home/classic-nee-tacademy-logo.png" type="image/x-icon" />
+		<link rel="stylesheet" href="../../stylesheets/sliderrevolution.css" />
     <link rel="stylesheet" href="../../stylesheets/admin.css" />
-    <link rel="stylesheet" href="sweetalert2.min.css" />
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
-      crossorigin="anonymous"
-    />
-  </head>
-  <body>
-    <%- include('../../layout/adminheader') %>
-    <section class="mainsection">
-      <div class="left"><%- include('../../layout/adminSideBar') %></div>
-      <div class="right">
+		<link
+			href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+			rel="stylesheet"
+			integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+			crossorigin="anonymous"
+		/>
+	</head>
+	<body>
+		<div class="preview">
+			<span class="closesvg" style="z-index: 10; height: 100px;width: 200px; right: 18%; top: 7%;">
+				<img
+				style="z-index: 10;" src="https://img.icons8.com/ios-glyphs/40/000000/macos-close.png"
+				/>
+				<h5 class="closeText">Close</h5>
+			</span>
+		</div>
+		<%- include('../../layout/adminheader') %>
+		<section class="mainsection">
+			<div class="left"><%- include('../../layout/adminSideBar') %></div>
+			<div class="right">
+        
+				<form
+					action="
+					/admin/loadingimg?_method=PUT"
+					method="post"
+					class="imgform"
+					enctype="multipart/form-data"
+				>
+					<h1 class="m-5 fs-4 fw-bold">Loading Screen Image</h1>
+					<table class="table" style="width: 70%">
+						<thead>
+							<tr>
+								<th scope="col">Current Image</th>
+								<th scope="col">New Image</th>
+								<th scope="col">Updates</th>
+							</tr>
+						</thead>
+						<tbody>
+							<% img.forEach(i => { %>
+							<tr>
+								<td>
+									<p class="onclickimg"><%= i.imgname %></p>
+									<span
+										class="currentPreviewSpan btn btn-info"
+										onclick="currentPreviewSpan(this)"
+										>Show Image</span
+									>
+									<span class="currentSliderimgurl"><%= i.sliderimg %> </span>
+								</td>
+								<td>
+									<input
+										type="file"
+										id="image"
+										accept="image/*"
+										class="fileimg uploaddisplay"
+										name="sliderimg"
+										onchange="uploadDisplayInput(this)"
+									/>
+									<button
+										class="previewSpan displaybtn btn"
+										onclick="previewSpanClick(this)"
+										disabled
+									>
+										Display
+									</button>
+									<span class="sliderimgurl"></span>
+								</td>
+								<td>
+									<input
+										type="checkbox"
+										id="checkbox"
+										class="updatesCheckbox"
+										disabled
+										onchange="updatesCheckboxChange(this)"
+										name="checkbox"
+										value="<%= i.cloudinaryName %>"
+										style="height: 20px; width: 20px"
+									/>
+								</td>
+							</tr>
+							<% }) %>
+						</tbody>
+					</table>
+					<button
+						type="button"
+						class="btn btn-outline-primary submit warningcheck"
+					>
+						Submit
+					</button>
+				</form>
         <form
           action="/admin/loadingimg"
           method="post"
-          class="imgform latestupdateform"
+          class="imgform latestupdateform toogleform"
         >
-          <h1 class="m-5 fs-4 fw-bold">Loading Page Image</h1>
-          <table class="table" style="width: 70%">
-            <thead>
-              <tr class="d-flex justify-content-center">
-                <th scope="col">Image State (<span class="loadingspan"><%= (state === "active")? "Active": "Inactive"%></span>)</th>
-              </tr>
-            </thead>
-            <tbody class="tbody">
-              <tr class="d-flex justify-content-center">
-                <td>
-                    <label class="switch">
-                        <input type="checkbox" class="toggleswitch" <%= (state === "active") ? "checked": "" %>>
-                        <span class="slider round"></span>
-                    </label> 
-                </td>
-              </tr>
-            </tbody>
-          </table>
-        </form>
-      </div>
-    </section>
-    <script src="../../javascripts/admin/home/loadingimg.js"></script>
-    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+          <div>
+            Image State (<span class="loadingspan"
+              ><%= (state === "active")? "Active": "Inactive"%></span
+            >)
+          </div>
 
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-      crossorigin="anonymous"
-    ></script>
-  </body>
+          <label class="switch">
+            <input type="checkbox" class="toggleswitch" <%= (state === "active")
+            ? "checked": "" %>>
+            <span class="slider round"></span>
+          </label>
+        </form>
+			</div>
+		</section>
+		<script
+			src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"
+			referrerpolicy="no-referrer"
+		></script>
+		<script
+			src="https://cdnjs.cloudflare.com/ajax/libs/paginationjs/2.1.5/pagination.min.js"
+			integrity="sha512-1zzZ0ynR2KXnFskJ1C2s+7TIEewmkB2y+5o/+ahF7mwNj9n3PnzARpqalvtjSbUETwx6yuxP5AJXZCpnjEJkQw=="
+			crossorigin="anonymous"
+			referrerpolicy="no-referrer"
+		></script>
+		<script
+			src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+			integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+			crossorigin="anonymous"
+		></script>
+		<script src="../../javascripts/admin/home/loadingimg.js"></script>
+		<script>
+			const previewDiv = document.querySelector('.preview');
+			const closesvg = document.querySelector('.closesvg');
+			const submitbtn = document.querySelector('.submit');
+
+			const uploadDisplayInput = (e) => {
+				e.parentNode.parentNode.children[2].children[0].removeAttribute(
+					'disabled'
+				);
+				if (e.value != '') {
+					e.parentNode.parentNode.children[2].children[0].removeAttribute(
+						'disabled'
+					);
+					submitbtn.classList.remove('warningcheck');
+					e.parentNode.children[1].classList.add('btn-info');
+					e.parentNode.children[1].removeAttribute('disabled');
+					e.parentNode.children[2].innerText = URL.createObjectURL(e.files[0]);
+				} else {
+					e.parentNode.parentNode.children[2].children[0].setAttribute(
+						'disabled',
+						true
+					);
+					e.parentNode.children[1].classList.remove('btn-info');
+					e.parentNode.children[1].setAttribute('disabled', true);
+					submitbtn.classList.add('warningcheck');
+				}
+			};
+
+			const nocontentswal = () => {
+				Swal.fire({
+					position: 'center',
+					icon: 'warning',
+					title: 'Please upload any image',
+					showConfirmButton: false,
+					timer: 2500
+				});
+			};
+			const checkswal = () => {
+				Swal.fire({
+					position: 'center',
+					icon: 'warning',
+					title: 'Please check any checkbox',
+					showConfirmButton: false,
+					timer: 2500
+				});
+			};
+
+			submitbtn.addEventListener('click', () => {
+				if (
+					submitbtn.getAttribute('type') == 'button' &&
+					submitbtn.classList.contains('warningcheck')
+				) {
+					nocontentswal();
+				} else if (
+					submitbtn.getAttribute('type') == 'button' &&
+					!submitbtn.classList.contains('warningcheck')
+				) {
+					checkswal();
+				} else {
+					return;
+				}
+			});
+
+			const updatesCheckboxChange = (e) => {
+				if (
+					document.querySelectorAll('input[type="checkbox"]:checked').length
+				) {
+					submitbtn.setAttribute('type', 'submit');
+				} else {
+					submitbtn.classList.add('warningcheck');
+				}
+			};
+			const previewSpanClick = (e) => {
+				const img = document.createElement('img');
+				if (e.parentNode.children[2].innerText.length < 1) return;
+				img.src = e.parentNode.children[2].innerText;
+				previewDiv.appendChild(img);
+				previewDiv.style.display = 'flex';
+				previewDiv.style.background = 'rgba(104, 100, 100, 0.671)';
+				closesvg.addEventListener('click', () => {
+					previewDiv.removeChild(img);
+					previewDiv.style.display = 'none';
+					previewDiv.style.background = 'none';
+				});
+			};
+
+			const currentPreviewSpan = (e) => {
+				const img = document.createElement('img');
+				img.src = e.parentNode.children[2].innerText;
+				previewDiv.appendChild(img);
+				previewDiv.style.display = 'flex';
+				previewDiv.style.background = 'rgba(104, 100, 100, 0.671)';
+				closesvg.addEventListener('click', () => {
+					previewDiv.removeChild(img);
+					previewDiv.style.display = 'none';
+					previewDiv.style.background = 'none';
+				});
+			};
+		</script>
+	</body>
 </html>
