--- a/views/home.ejs
+++ b/views/home.ejs
@@ -28,12 +28,11 @@
 
 <body class="body">
 	<% if (state === "active") { %>
-		<% array.forEach(ele => { %>
+		
 			<div class="closeimage">
 				<span class="exit1"><img src="https://img.icons8.com/ios-glyphs/40/000000/macos-close.png" /></span>
-				<img src="<%= ele.sliderimg %> " alt="">
+				<img src="<%= image.sliderimg %> " alt="">
 			</div>
-		<% }) %>
 	<% } %>
 	<div class="backgroundMain">
 		<%- include('./layout/header') %>
